# OncoBridge

./: .dockerignore  .gitignore  .secrets.baseline  DATA_CARD.md  Dockerfile  LICENSE  README.md  config.realdata.template.yaml  config.yaml  config.yaml.example  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/regimen_buckets/: generic_oncology.yaml  sclc.yaml
configs/signatures/: generic_oncology.yaml  sclc.yaml
data/: mock_ehr.sqlite
data/real_examples/sclc_tumorminer/: config.sclc_tumorminer_panel.yaml
data/tiledb/expression_array/__schema/: __1773941694233_1773941694233_7558f7d26614320f04458c3d99e95deb
data/tiledb/variants_array/__schema/: __1773941694348_1773941694348_0ba20927081f866e03b98b889d9d0ee5
ehr_fhir_genomics_toolkit/: __init__.py  benchmarking.py  cli.py  cohort_dsl.py  config.py  data_contracts.py  demo_data.py  fhir_client.py  io_safety.py  merger.py  models.py  provenance.py  run_manifest.py  schema.py  sclc_real_example.py  security.py  signatures.py  sql_connector.py  survival.py  therapy_buckets.py  tiledb_expression.py  tiledb_utils.py  tiledb_variants.py
ehr_fhir_genomics_toolkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: 01_downstream_analysis_example.ipynb  02_survival_modeling_example.ipynb  03_real_sclc_patient_example.ipynb
notebooks/.ipynb_checkpoints/: 01_downstream_analysis_example-checkpoint.ipynb
scripts/: build_and_push_acr.sh  convert_sclc_tumorminer_to_default_csv.py  load_real_sqlite_from_csv.py  load_real_tiledb_from_csv.py  make_mock_data.py  prepare_sclc_tumorminer_example.py  run_benchmark.py  run_pipeline.sh  run_survival_example.py  write_example_run_manifest.py
tests/: test_bad_config_validation.py  test_bad_runspec_validation.py  test_benchmarking.py  test_cli_demo_mode.py  test_cli_mock_infra.py  test_cohort_dsl.py  test_data_contracts.py  test_mutation_flags.py  test_production_hardening.py  test_run_manifest.py  test_signatures.py  test_sql_spec.py  test_survival_example.py
(+15 files in other folders)
