[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ehr-fhir-genomics-toolkit"
version = "0.1.0"
description = "Toolkit for integrating EHR clinical data with genomic TileDB arrays for cohort analysis"
authors = [{name = "Kavya Kannan"}]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["ehr_fhir_genomics_toolkit*"]